--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -8,7 +8,7 @@
       "settings": {
         "texlab": {
           "build": {
-            "onSave": true
+            "onSave": false
           }
         }
       }
